Revert "refactor: simplify code by removing interfaces"
This reverts commit b2a3efba4aaa9ad568819bd37cb5d2f3f0d8990f.